# jupitor

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  go.mod  go.sum
cmd/cn-daily/: main.go
cmd/cn-server/: main.go
cmd/jupitor-cli/: main.go
cmd/jupitor-server/: main.go
cmd/jupitor-trader/: main.go
cmd/us-alpaca-data/: main.go
cmd/us-check-symbol/: main.go
cmd/us-client/: main.go
cmd/us-compare-trades/: main.go
cmd/us-daily/: main.go
cmd/us-daily-summary/: main.go
cmd/us-news-history/: main.go
cmd/us-stock-trades/: main.go
cmd/us-stream/: main.go
cmd/us-stream-client/: main.go
cmd/us-stream-console/: main.go
cmd/us-trade/: main.go
cmd/us-trade-universe/: main.go
config/: jupitor.yaml  markets.yaml
deployments/: Dockerfile  docker-compose.yaml  jupitor-server.service
internal/api/: grpc.go  handlers.go  middleware.go  server.go  server_test.go  websocket.go
internal/broker/: alpaca.go  broker.go  broker_test.go  simulator.go
internal/cnapi/: index.go  server.go  types.go
internal/config/: config.go  config_test.go
migrations/: 001_initial.sql
proto/: marketdata.proto  strategy.proto  trading.proto
python/: pyproject.toml
python/notebooks/: example.ipynb
python/scripts/: cn_baostock_data.py  update_symbols.py  us_daily_movers.py  us_ex_index_trades.py  us_index_data.py
python/src/jupitor/: __init__.py  __main__.py  analysis.py  cli.py  client.py  config.py  data.py  strategy.py
python/tests/: test_cli.py  test_config.py  test_data.py
scripts/: record-demo.sh
tools/: lint.sh  proto-gen.sh
(+90 files in other folders)
